--- a/Site Toni/styles.css
+++ b/Site Toni/styles.css
@@ -39,7 +39,6 @@
   .hero-container {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	height: 95vh;
 	padding: 3rem calc((100vw - 1300px) / 2);
   }
   
@@ -82,6 +81,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	max-height: 400px;
 	padding: 0rem 2rem;
   }
   
